examples/failing/OrphanInstanceNullary/Lib.purs
module Lib where
class C
